--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     },
     "dependencies": {
         "bootstrap-icons": "^1.11.3",
-        "fa-icons": "^0.2.0"
+        "bootstrap-select": "^1.13.18",
+        "fa-icons": "^0.2.0",
+        "jquery": "^3.7.1",
+        "quill": "^2.0.0-rc.2",
+        "select2": "^4.1.0-rc.0",
+        "select2-bootstrap-5-theme": "^1.3.0"
     }
 }
