--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "andreaselia/laravel-api-to-postman": "^2.0",
         "doctrine/dbal": "3.5.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel-lang/common": "^6.1",
